force-app/main/default/objects/Site_urls__c/Site_urls__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Site urls</label>
</CustomObject>