force-app/main/default/objects/Site_urls__c/fields/GDPR_Url__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Url__c</fullName>
    <label>GDPR Url</label>
    <type>Url</type>
</CustomField>