force-app/main/default/objects/Site_urls__c/fields/lpGDPRcompany__c.field-meta.xml
<CustomField>
    <fullName>lpGDPRcompany__c</fullName>
    <label>lpGDPRcompany</label>
    <type>Url</type>
</CustomField>