force-app/main/default/objects/Site_urls__c/fields/lpGDPRimg2__c.field-meta.xml
<CustomField>
    <fullName>lpGDPRimg2__c</fullName>
    <label>lpGDPRimg2</label>
    <type>Url</type>
</CustomField>