force-app/main/default/objects/Site_urls__c/fields/lpGDPRimg__c.field-meta.xml
<CustomField>
    <fullName>lpGDPRimg__c</fullName>
    <label>lpGDPRimg</label>
    <type>Url</type>
</CustomField>