force-app/main/default/objects/Site_urls__c/fields/lpGDPRlogo__c.field-meta.xml
<CustomField>
    <fullName>lpGDPRlogo__c</fullName>
    <label>lpGDPRlogo</label>
    <type>Url</type>
</CustomField>