force-app/main/default/objects/Site_urls__c/fields/lpGDPRprivacy__c.field-meta.xml
<CustomField>
    <fullName>lpGDPRprivacy__c</fullName>
    <label>lpGDPRprivacy</label>
    <type>Url</type>
</CustomField>