force-app/main/default/objects/Site_urls__c/fields/metrios__c.field-meta.xml
<CustomField>
    <fullName>metrios__c</fullName>
    <label>metrios</label>
    <type>Url</type>
</CustomField>